# marketing-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  SETUP.md  docker-compose.yml  pyproject.toml
config/: agent.yaml  channels.yaml  strategy.yaml
scheduled_tasks/: code_evolution.md  content_planning.md  daily_analysis.md  prompt_evolution.md  strategy_evolution.md
src/: config.py  main.py  scheduler.py
src/analytics/: collector.py
src/api/: analytics.py  content.py  health.py  strategy.py
src/channels/: base.py  blog.py  email_channel.py  facebook.py  instagram.py  twitter.py
src/content/: publisher.py
src/content/templates/: blog_post.yaml  email_campaign.yaml  sns_post.yaml
src/db/: database.py  models.py  repository.py
